--- a/tox.ini
+++ b/tox.ini
@@ -23,8 +23,9 @@ usedevelop = true
 
 [testenv:codecov]
 commands =
-    codecov
+    codecov upload-process
 deps =
+    codecov-cli
     coverage[toml]
 skip_install = true
 allowlist_externals =
@@ -49,7 +50,6 @@ commands =
     pylint {posargs}
 deps =
     pylint==3.3.3
-    pytest-mock
 usedevelop = true
 
 [testenv:pypi]
